Started User routes

--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "description": "D397A group assignment",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/view/index.js"
   },
   "author": "Sys",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "mongoose": "^6.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
