--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Sys",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
